--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@
         width: 17%;
         margin-top: 10%;
         margin-bottom: 50px;
-        font-size: medium;
+        font-size: 13px;
         background-color: rgba(128, 128, 128, 0.295);
         font-family:font-family: candara light;
       }
