--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@
         color: white;
         font-weight: bold;
         font-family: great vibes;
-        font-size: 50px;
+        font-size: 40px;
         transform: rotate(-5deg);
         margin: 15px;
     }
@@ -35,6 +35,7 @@
       .tip{
         color: white;
         font-size: 20px;
+        margin: 15px;
       }
       .header{
         text-align: center;
@@ -89,11 +90,10 @@
       }
       .subhead{
         text-align: center;
-        margin: 43%;
-        margin-bottom: 0%;
-        width: 17%;
+        margin: 42%;
+        margin-bottom: 23px;
+        width: 16%;
         margin-top: 10%;
-        margin-bottom: 50px;
         font-size: 13px;
         background-color: rgba(128, 128, 128, 0.295);
         font-family:font-family: candara light;
@@ -101,11 +101,12 @@
 
       .headercontainer {
         border-right: 2px solid rgba(128, 128, 128, 0.603);
-        margin-top: -3.7%;
+        margin-top: -1.7%;
         padding: 30px;
         margin-bottom: 20px;
        width: 50%;
        text-align: right;
+       gap: 1,5rem;
       }
       .circle {
         border-radius: 50%;
@@ -137,21 +138,67 @@
     }
 
     .headercontainer2 {
-      border: 2px solid rgba(128, 128, 128, 0.603);
-      margin-top: -3.7%;
+      border-left: 2px solid rgba(128, 128, 128, 0.603);
+      margin-top: -8.6%;
       padding: 30px;
       margin-bottom: 20px;
-     width: 50%;
-     text-align: right;
+     width: 50.1%;
+     text-align: left;
      display: flex;
-     align-self: flex-end;
+     align-self: flex-start;
      flex-direction:column ;
+     float: right;
+     padding-left: 0%;
+     gap: 1,5rem;
+    
     }
     .company-item2 {
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
       position: relative;
       margin-bottom: 10px;
       margin-top: 10px;
     }
-    
+    .circle2 {
+      border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        background-color:rgb(248, 94, 5) ;
+        left: -1.1rem;
+        position: absolute;
+        top: -0.4rem;
+      
+    }
+    .company2 {
+      display: flex;
+      position: relative;
+      margin-left: 40px;
+    }
+    .headercard {
+      padding-left: 35px;
+    }
+    .description2 {
+      padding-left: 2.5rem;
+    }
+    .outer {
+      width: 100%;
+      padding: 75px;
+    }
+    .subhead2 {
+      text-align: center;
+      width: 10%;
+      margin-top: 0px;
+      margin-left: 45%;
+      margin-bottom: 23px;
+      font-size: 18px;
+      background-color: rgba(128, 128, 128, 0.295);
+      font-family:font-family: candara light;
+    }
+    .headercontainer3 {
+      border-right: 2px solid rgba(128, 128, 128, 0.603);
+      margin-top: -1.7%;
+      padding: 30px;
+     width: 50%;
+     text-align: right;
+     gap: 1,5rem;
+    }
